company admin page updated

--- a/reserveTime/core/templates/company-photos.html
+++ b/reserveTime/core/templates/company-photos.html
@@ -25,41 +25,114 @@
     
     {% include 'partials/company-header.html' %}
 
-    <main>
-        <div class="container mt-3 company-admin-container">
-            <div class="row">
-                <h3 class="full bottom-border bold pb-3 mb-5">
-                    <a href="{% url 'account:company-profile' user.company.pk %}"><i class="fas fa-arrow-alt-circle-left"></i></a>
-                    Add Photo
-                </h3>
-                <form method = "POST" class="add-img-form mt-3 mb-3" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <div class="d-flex">
-                        <label for="upload-img" class="add-img-label">Add Photo<i class="ml-2 fas fa-plus-circle"></i></label>
-                        {{form.photo}}
-                        {{form.photo.errors}}
-                    </div>
-                    {{form.photo_type}}
-                    {{form.photo_type.errors}}
-                    <input type="submit" value="Save" class="save-btn">
-                </form>
-                <h3 class="full bottom-border bold pb-3 mb-5">Company Photos</h3>
-                <div class="row row-cols-2 row-cols-sm-3 row-cols-md-5 mb-3 full">
-                    <!-- <p>You don't have any photo</p> -->
-                    {% if photos %}
-                        {% for photo in photos %}
-                                <div class="col">
-                                    <a href="{% url 'restaurant:photo-update' photo.pk %}">
-                                        <img class="photo-list-item" src="{{photo.photo.url}}" data-type='{{photo.photo_type}}' alt="">
+    <main class="full-h">
+        <div class="full full-h">
+            <div class="row full-h  justify-content-center">
+                <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
+                    <div class="admin-menu-box mt-5">
+                        <nav>
+                            <ul class="admin-menu-list">
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-home"></i>
+                                            <span class="ml-2 bold">Home</span>
+                                        </div>
                                     </a>
-                                </div>
-                        {% endfor %}
-                    {% else %}
-                        <p class="bold m-auto">You don't have any photo</p>
-                    {% endif %}
-                   
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:photo' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-images"></i>
+                                            <span class="ml-2 bold">Photos</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:menu' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-hamburger"></i>
+                                            <span class="ml-2 bold">Menus</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-infos' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-info-circle"></i>
+                                            <span class="ml-2 bold">Informations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-table"></i>
+                                            <span class="ml-2 bold">Tables</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-clock"></i>
+                                            <span class="ml-2 bold">Reservations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-users' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-users"></i>
+                                            <span class="ml-2 bold">Users</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-
+                <div class="col-9 col-lg-10">
+                    <div class="container mt-3">
+                        <div class="row">
+                            <h3 class="full bottom-border bold pb-3 mb-5">
+                                Add Photo
+                            </h3>
+                            <form method = "POST" class="add-img-form mt-3 mb-3" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                        <div class="d-flex">
+                                            <label for="upload-img" class="add-img-label">Add Photo<i class="ml-2 fas fa-plus-circle"></i></label>
+                                            {{form.photo}}
+                                            {{form.photo.errors}}
+                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    {{form.photo_type}}
+                                    {{form.photo_type.errors}}
+                                </div>
+                                <input type="submit" value="Save" class="save-btn">
+                            </form>
+                            <h3 class="full bottom-border bold pb-3 mb-5">Company Photos</h3>
+                            <div class="row row-cols-2 row-cols-sm-3 row-cols-md-5 mb-3 full">
+                                <!-- <p>You don't have any photo</p> -->
+                                {% if photos %}
+                                    {% for photo in photos %}
+                                            <div class="col">
+                                                <a href="{% url 'restaurant:photo-update' photo.pk %}">
+                                                    <img class="photo-list-item" src="{{photo.photo.url}}" data-type='{{photo.photo_type}}' alt="">
+                                                </a>
+                                            </div>
+                                    {% endfor %}
+                                {% else %}
+                                    <p class="bold m-auto">You don't have any photo</p>
+                                {% endif %}
+                               
+                            </div>
+            
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
