--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -18,25 +18,8 @@
     <title>Company admin panel</title>
 
     <style>
-        /* #company-admin-body{
-            background: #e5e5e5;
-        } */
-        .company-admin-container{
-            max-width: 80%;
-            margin: auto;
-        }
-        .compamy-admin-item{
-            position: relative;
-        }
-        canvas{
-            height: 250px;
-        }
-        .canvas-block{
-            background-color: #fff;
-            padding: 15px;
-            margin: 10px;
-            border-radius: 10px;
-        }
+
+        
     </style>
 
 </head>
@@ -45,9 +28,9 @@
     {% include 'partials/company-header.html' %}
   
     <main>
-        <div class="mt-5 company-admin-container">
+        <div class="mt-5 mb-5 company-admin-container">
             <div class="row">
-                <div class="col-lg-4 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center">
                     <a href="{% url 'restaurant:photo' %}">
                         <div class="compamy-admin-item">
                             <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #3f5efb 0%, #fc466b 100%);">
@@ -61,7 +44,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center">
                     <a href="{% url 'restaurant:menu' %}">
                         <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #11998e 0%, #38ef7d 100%);">
                             <i class="fas fa-hamburger"></i>
@@ -69,7 +52,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-infos' user.company.pk %}">
                         <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #D6ED17FF 0%, #EEA47FFF 100%);">
                             <i class="fas fa-info-circle"></i>
@@ -77,9 +60,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 d-flex m-auto justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex m-auto justify-content-center">
                     <a href="{% url 'restaurant:company-tables' user.company.pk %}">
-                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #ee9439 0%, #fffb00 100%);background-color: #fbb168 ;">
+                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #2c3e50 0%, #bdc3c7 100%);background-color: #fbb168 ;">
                             <i class="fas fa-table"></i>
                             <div class="ml-2 d-flex flex-direction-column">
                                 <span class="bold">Tables</span>
@@ -89,7 +72,7 @@
                     </a>
                 </div>
                 
-                <div class="col-lg-4 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
                         <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #ff0048 0%, #e17695 100%);background-color: #e17695;">
                             <i class="fas fa-clock"></i>
@@ -100,9 +83,9 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 d-flex justify-content-center">
+                <div class="col-lg-4 col-md-6 d-flex justify-content-center">
                     <a href="{% url 'restaurant:company-users' user.company.pk %}">
-                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg, #45b649 0%, #dce35b 100%);">
+                        <div class="link-box" style="background-image: -webkit-linear-gradient(90deg,  #185a9d 0%, #43cea2 100%);">
                             <i class="fas fa-users"></i>
                             <div class="ml-2 d-flex flex-direction-column">
                                 <span class="bold">Users</span>
@@ -114,8 +97,8 @@
                 
             </div>
             <div class="row mt-5">
-                <div class="col-6">
-                    <div class="canvas-block">
+                <div class="col-lg-6">
+                    <div class="canvas-block header-shadow">
                         <div class="chart-content">
                             <h4 >Recent Reports for reservations</h4>
                         </div>
@@ -124,8 +107,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class="canvas-block">
+                <div class="col-lg-6">
+                    <div class="canvas-block header-shadow">
                         <div class="chart-content">
                             <h4>Chart Pie</h4>
                         </div>
