--- a/reserveTime/core/templates/company-menus.html
+++ b/reserveTime/core/templates/company-menus.html
@@ -25,75 +25,144 @@
     {% include 'partials/company-header.html' %}
 
     <main>
-        <div class="container mt-3 company-admin-container">
-            <div class="row">
-                <h3 class="full bottom-border bold pb-3 mb-5">
-                    <a href="{% url 'account:company-profile' user.company.pk %}"><i class="fas fa-arrow-alt-circle-left"></i></a>
-                    Create menu
-                </h3>
-                <form method = "POST" class="full mb-3 menu-form">
-                    {% csrf_token %}
-                   <div class="row">
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                {{form.title}}
-                                {{form.title.errors}}
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                {{form.price}}
-                                {{form.price.errors}}
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-group">
-                                {{form.menu_type}}
-                                {{form.menu_type.errors}}
-                            </div>
-                        </div>
-                   </div>
-                   <div class="row">
-                       <div class="col">
-                            <div class="form-group">
-                                {{form.description}}
-                                {{form.description.errors}}
-                            </div>
-                       </div>
-                   </div>
-                    <input type="submit" value="Save" class="save-btn">
-                </form>
-                
-                <h3 class="full bottom-border bold pb-3 mb-5">Company Menu list</h3>
-                <div class="row company-menu-block">
-                  {% for category in menu_categories %}
-                    
-                    <div class="menu-section pl-4 pr-4 mb-4">
-                        <div class="menu-section-header mb-4 bottom-border"><span>{{category.title}}</span></div>
-                        <div class="row menu-items">
-                            {% for menu in menus %}
-                                {% if menu.menu_type == category %}
-                                <div class="col-sm-6">
-                                    <a href="{% url 'restaurant:menu-update' menu.pk %}">
-                                        <div class="menu-item">
-                                            <div class="menu-item-header">
-                                                <div class="menu-title"><span>{{menu.title}}</span></div>
-                                                <div class="menu-price"><span>${{menu.price}}</span></div>
-                                            </div>
-                                            <div class="menu-description">
-                                                <p>{{menu.description}}</p>
-                                            </div>
+        <div class="full">
+            <div class="row justify-content-center">
+                <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
+                    <div class="admin-menu-box mt-5">
+                        <nav>
+                            <ul class="admin-menu-list">
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-home"></i>
+                                            <span class="ml-2 bold">Home</span>
                                         </div>
                                     </a>
-                                </div>
-                                
-                                {% endif %}
-                                
-                            {% endfor %}
-                           
-                       </div>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:photo' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-images"></i>
+                                            <span class="ml-2 bold">Photos</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:menu' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-hamburger"></i>
+                                            <span class="ml-2 bold">Menus</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-infos' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-info-circle"></i>
+                                            <span class="ml-2 bold">Informations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-table"></i>
+                                            <span class="ml-2 bold">Tables</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-clock"></i>
+                                            <span class="ml-2 bold">Reservations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-users' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-users"></i>
+                                            <span class="ml-2 bold">Users</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
-                  {% endfor %}
+                </div>
+                <div class="col-9 col-lg-10">
+                    <div class="container mt-3">
+                        <div class="row">
+                            <h3 class="full bottom-border bold pb-3 mb-5">
+                                Create menu
+                            </h3>
+                            <form method = "POST" class="full mb-3 menu-form">
+                                {% csrf_token %}
+                               <div class="row">
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            {{form.title}}
+                                            {{form.title.errors}}
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            {{form.price}}
+                                            {{form.price.errors}}
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            {{form.menu_type}}
+                                            {{form.menu_type.errors}}
+                                        </div>
+                                    </div>
+                               </div>
+                               <div class="row">
+                                   <div class="col">
+                                        <div class="form-group">
+                                            {{form.description}}
+                                            {{form.description.errors}}
+                                        </div>
+                                   </div>
+                               </div>
+                                <input type="submit" value="Save" class="save-btn">
+                            </form>
+                            
+                            <h3 class="full bottom-border bold pb-3 mb-5">Company Menu list</h3>
+                            <div class="row company-menu-block">
+                              {% for category in menu_categories %}
+                                
+                                <div class="menu-section pl-4 pr-4 mb-4">
+                                    <div class="menu-section-header mb-4 bottom-border"><span>{{category.title}}</span></div>
+                                    <div class="row menu-items">
+                                        {% for menu in menus %}
+                                            {% if menu.menu_type == category %}
+                                            <div class="col-sm-6">
+                                                <a href="{% url 'restaurant:menu-update' menu.pk %}">
+                                                    <div class="menu-item">
+                                                        <div class="menu-item-header">
+                                                            <div class="menu-title"><span>{{menu.title}}</span></div>
+                                                            <div class="menu-price"><span>${{menu.price}}</span></div>
+                                                        </div>
+                                                        <div class="menu-description">
+                                                            <p>{{menu.description}}</p>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            
+                                            {% endif %}
+                                            
+                                        {% endfor %}
+                                       
+                                   </div>
+                                </div>
+                              {% endfor %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
