--- a/reserveTime/core/templates/company-users.html
+++ b/reserveTime/core/templates/company-users.html
@@ -24,41 +24,111 @@
     
     {% include 'partials/company-header.html' %}
     
-    <main>
-        <div class="container mt-3 company-admin-container">
-            <div class="row">
-                <h3 class="full bottom-border bold pb-3 mb-5">All users reserved your restaurant</h3>
-                <div class="user-box inner-container">
-                    {% for user in reserved_users %}
-                        <div class="user-item row">
-                            <div class="col-3 comment-author">
-                                <div class="reserve-author-profile-img">{{user.first_name|slice:"1"}}{{user.last_name|slice:"1"}}</div>
-                                <div class="user-username">{{user.username}}</div>
-                                <div class="user-address">San Francisco</div>
-                                <div class="user-comments-count">
-                                    <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> 4 reviews</p>
-                                </div>
-                            </div>
-                            <div class="col-9">
-                                <div class="d-flex">
-                                    <div class="posted-date pl-4">
-                                        <p>Last Reservation on July 7, 2020</p>
+    <main class="full-h">
+        <div class="full full-h">
+            <div class="row full-h  justify-content-center">
+                <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
+                    <div class="admin-menu-box mt-5">
+                        <nav>
+                            <ul class="admin-menu-list">
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-home"></i>
+                                            <span class="ml-2 bold">Home</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:photo' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-images"></i>
+                                            <span class="ml-2 bold">Photos</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:menu' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-hamburger"></i>
+                                            <span class="ml-2 bold">Menus</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-infos' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-info-circle"></i>
+                                            <span class="ml-2 bold">Informations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-table"></i>
+                                            <span class="ml-2 bold">Tables</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-clock"></i>
+                                            <span class="ml-2 bold">Reservations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-users' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-users"></i>
+                                            <span class="ml-2 bold">Users</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-9 col-lg-10">
+                    <div class="container mt-5 company-admin-container">
+                        <div class="row bg-white header-shadow p-3">
+                            <h3 class="full bottom-border bold pb-3 mb-5">All users reserved your restaurant</h3>
+                            <div class="user-box full">
+                                {% for user in reserved_users %}
+                                    <div class="user-item row">
+                                        <div class="col-3 comment-author">
+                                            <div class="reserve-author-profile-img">{{user.first_name|slice:"1"}}{{user.last_name|slice:"1"}}</div>
+                                            <div class="user-username">{{user.username}}</div>
+                                            <div class="user-address">San Francisco</div>
+                                            <div class="user-comments-count">
+                                                <p class="review-text mr-4 ml-4"><i class="far fa-comment"></i> 4 reviews</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-9">
+                                            <div class="d-flex">
+                                                <div class="posted-date pl-4">
+                                                    <p>Last Reservation on July 7, 2020</p>
+                                                </div>
+                                            </div>
+                                            <div class="d-flex">
+                                                <div class="posted-date pl-4">
+                                                    <p>Number of reservations : 4</p>
+                                                </div>
+                                            </div>
+                                            <div class="d-flex">
+                                                <div class="posted-date pl-4">
+                                                    <p>Total money for all reservations : 123$</p>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="posted-date pl-4">
-                                        <p>Number of reservations : 4</p>
-                                    </div>
-                                </div>
-                                <div class="d-flex">
-                                    <div class="posted-date pl-4">
-                                        <p>Total money for all reservations : 123$</p>
-                                    </div>
-                                </div>
-                                
+                                {% endfor %}
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
