--- a/reserveTime/core/templates/home-page.html
+++ b/reserveTime/core/templates/home-page.html
@@ -55,7 +55,7 @@
                             </button>
                             <div class="custom-drop-down shadow box1" style="display: none;">
                                 <div class="triangle"></div>
-                                <span>Hello, User</span>
+                                <span>Hello, {{request.user.first_name|capfirst}}</span>
                                 <ul>
                                     {% if request.user.is_company %}
                                         <li><a href="{% url 'account:company-profile' user.pk %}">Company Profile</a></li>
@@ -68,50 +68,51 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="reserve-table">
+                            <button type="button" class="header-btn"><i class="far fa-calendar"></i></button>
+                            <div class="custom-drop-down p-3 box2" style="display: none;">
+                                <div class="triangle"></div>
+                                <span>Upcoming reservations</span>
+                                <p class="pl-2 pr-2">You have no upcoming reservations</p>
+                            </div>
+                        </div>
+                        <div class="notification">
+                            <button type="button" class="header-btn notification-btn">
+                                {% if notifications %}
+                                    <span class="notification-count"></span>
+                                {% endif %}
+                                <i class="far fa-bell"></i>
+                            </button>
+                            <div class="custom-drop-down box3 p-3" style="display: none;">
+                                <div class="triangle"></div>
+                                <span>Notifications</span>
+                                {% if notifications %}
+                                    {% if request.user.is_company %}
+                                        {% for notification in notifications %}
+                                            <a class="pl-2 pr-2" href="{% url 'restaurant:company-reservations' user.company.pk %}">{{notification.text}}</a>
+                                        {% endfor %}
+                                    {% else %}
+                                        {% for notification in notifications %}
+                                            <a class="pl-2 pr-2 mb-2" href="{% url 'account:user-profile' request.user.pk %}">{{notification.sender.company.company_name}}</a>
+                                        {% endfor %}
+                                    {% endif %}
+                                    <form  class="full mt-2 mb-2" id="readNotifications" action="{% url 'core:read-notifications' %}" method="POST">
+                                        {% csrf_token %}
+                                        <input type="submit" class="btn btn-outline-secondary float-r" value="Mark all as read!">
+                                    </form>
+                                {% else %}
+                                    <img src="{% static 'images/animat-bell-color.gif' %}" width="50%" class="m-auto" alt="">
+                                    <p class="pl-2 pr-2 bold text-center">Nothing to see here, you’re all caught up!</p>
+                                {% endif %}
+                                
+                            </div>
+                        </div>
                     {% else %}
                         <button type="button" class="btn register-btn mr-2" data-toggle="modal" data-target="#exampleModal">Sign Up</button>
                         <a href="{% url 'account:login' %}" class="btn login-btn bold">Sign In</a>
                     {% endif %}
                     
-                    <div class="reserve-table">
-                        <button type="button" class="header-btn"><i class="far fa-calendar"></i></button>
-                        <div class="custom-drop-down p-3 box2" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Upcoming reservations</span>
-                            <p class="pl-2 pr-2">You have no upcoming reservations</p>
-                        </div>
-                    </div>
-                    <div class="notification">
-                        <button type="button" class="header-btn notification-btn">
-                            {% if notifications %}
-                                <span class="notification-count"></span>
-                            {% endif %}
-                            <i class="far fa-bell"></i>
-                        </button>
-                        <div class="custom-drop-down box3 p-3" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Notifications</span>
-                            {% if notifications %}
-                                {% if request.user.is_company %}
-                                    {% for notification in notifications %}
-                                        <a class="pl-2 pr-2" href="{% url 'restaurant:company-reservations' user.company.pk %}">{{notification.text}}</a>
-                                    {% endfor %}
-                                {% else %}
-                                    {% for notification in notifications %}
-                                        <a class="pl-2 pr-2 mb-2" href="{% url 'account:user-profile' request.user.pk %}">{{notification.sender.company.company_name}}</a>
-                                    {% endfor %}
-                                {% endif %}
-                                <form  class="full mt-2 mb-2" id="readNotifications" action="{% url 'core:read-notifications' %}" method="POST">
-                                    {% csrf_token %}
-                                    <input type="submit" class="btn btn-outline-secondary float-r" value="Mark all as read!">
-                                </form>
-                            {% else %}
-                                <img src="{% static 'images/animat-bell-color.gif' %}" width="50%" class="m-auto" alt="">
-                                <p class="pl-2 pr-2 bold text-center">Nothing to see here, you’re all caught up!</p>
-                            {% endif %}
-                            
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
             <div class="row">
