--- a/reserveTime/core/templates/reservation-detail.html
+++ b/reserveTime/core/templates/reservation-detail.html
@@ -25,82 +25,152 @@
 
 
     <main>
-        <div class="container mt-3 company-admin-container">
-            <div class="row reservation-detail-block">
-                <h3 class="full bottom-border bold pb-3 mb-5">New Reservation</h3>
-                <div class="comment-item full ">
-                    <h4 class="full bottom-border bold pb-3 mb-3 text-center">Reservation Details</h4>
-                    {% for reserve in reservation_detail %}
-                        <div class="row">
-                            <div class="col-lg-6 mb-3 reserve-author">
-                            {% for reservation in reserve.reservation %}{{total_price.total_price}}
-                                <div class="reserve-author-profile-img">{{reservation.user.first_name|first}}{{reservation.user.last_name|first}}</div>
-                                <div class="reserve-author-username">{{reservation.user.username}}</div>
-                                <div class="reserve-author-address">Sabirabad</div>  
-                            {% endfor %}
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="d-flex">
-                                    <div class="d-flex ">
-                                        <span class="bold mr-2">Reserve Date and Time : </span>
-                                        <p>{% for reservation in reserve.reservation %}{{reservation.reserved_date}}, {{reservation.reserved_time|time:'H:i:s'}}{% endfor %}</p>
-                                    </div>
-                                </div>
-                                <div class="d-flex">
-                                    <span class="bold mr-2">Party Size : </span>
-                                    <p> {% for size in reserve.table_size %}{{size}}{% endfor %} people </p>
-                                </div>
-                                <div class="d-flex">
-                                    <span class="bold mr-2">Total Price : </span>
-                                    <p>{% for total_price in reserve.reservation %}{{total_price.total_price}}{% endfor %} $</p>
-                                </div>
-                                <div class="d-flex">
-                                    <form action="">
-                                        <input type="submit" class="mt-2 btn btn-success mr-2" value="Accept">
-                                    </form>
-                                    <form action="">
-                                        <input type="submit" class="mt-2 btn btn-danger" value="Denied">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                    <div class="col mt-5">
-                        {% for category in menu_categories %}
-                            <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
-                                <div class="menu-section-header mb-4 text-center"><h4 class="bold">{{category.title}}</h4></div>
-                                <div class="row menu-items">
-                                    {% for portion in menus %}
-                                        {% for menu in portion.menu  %}
-                                            {% if menu.menu_type == category %}
-                                                <div class="col-sm-6">
-                                                    <div class="menu-item">
-                                                        <div class="portion-count">
-                                                        
-                                                            <span>{{portion.portion_count}} portion  </span>
-                                                        </div>
-                                                        
-                                                        <div class="menu-item-header">
-                                                            <div class="menu-title"><span>{{menu.title}}</span></div>
-                                                            <div class="menu-price"><span>${{menu.price}}</span></div>
-                                                        </div>
-                                                        <div class="menu-description">
-                                                            <p>{{menu.description}}</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            {% endif %}
-                                        {% endfor %}
-
-                                    {% endfor %}
-                                    
-                                </div>
-                            </div>
-                        {% endfor %}
+        <div class="full">
+            <div class="row  justify-content-center">
+                <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
+                    <div class="admin-menu-box mt-5">
+                        <nav>
+                            <ul class="admin-menu-list">
+                                <li>
+                                    <a href="{% url 'account:company-profile' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-home"></i>
+                                            <span class="ml-2 bold">Home</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:photo' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-images"></i>
+                                            <span class="ml-2 bold">Photos</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:menu' %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-hamburger"></i>
+                                            <span class="ml-2 bold">Menus</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-infos' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-info-circle"></i>
+                                            <span class="ml-2 bold">Informations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-tables' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-table"></i>
+                                            <span class="ml-2 bold">Tables</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-reservations' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-clock"></i>
+                                            <span class="ml-2 bold">Reservations</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'restaurant:company-users' user.company.pk %}">
+                                        <div class="d-flex">
+                                            <i class="fas fa-users"></i>
+                                            <span class="ml-2 bold">Users</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
-    
+                <div class="col-9 col-lg-10">
+                    <div class="container mt-3">
+                        <div class="row reservation-detail-block">
+                            <h3 class="full bottom-border bold pb-3 mb-5">New Reservation</h3>
+                            <div class="comment-item full ">
+                                <h4 class="full bottom-border bold pb-3 mb-3 text-center">Reservation Details</h4>
+                                {% for reserve in reservation_detail %}
+                                    <div class="row">
+                                        <div class="col-lg-6 mb-3 reserve-author">
+                                        {% for reservation in reserve.reservation %}{{total_price.total_price}}
+                                            <div class="reserve-author-profile-img">{{reservation.user.first_name|first}}{{reservation.user.last_name|first}}</div>
+                                            <div class="reserve-author-username">{{reservation.user.username}}</div>
+                                            <div class="reserve-author-address">Sabirabad</div>  
+                                        {% endfor %}
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="d-flex">
+                                                <div class="d-flex ">
+                                                    <span class="bold mr-2">Reserve Date and Time : </span>
+                                                    <p>{% for reservation in reserve.reservation %}{{reservation.reserved_date}}, {{reservation.reserved_time|time:'H:i:s'}}{% endfor %}</p>
+                                                </div>
+                                            </div>
+                                            <div class="d-flex">
+                                                <span class="bold mr-2">Party Size : </span>
+                                                <p> {% for size in reserve.table_size %}{{size}}{% endfor %} people </p>
+                                            </div>
+                                            <div class="d-flex">
+                                                <span class="bold mr-2">Total Price : </span>
+                                                <p>{% for total_price in reserve.reservation %}{{total_price.total_price}}{% endfor %} $</p>
+                                            </div>
+                                            <div class="d-flex">
+                                                <form action="">
+                                                    <input type="submit" class="mt-2 btn btn-success mr-2" value="Accept">
+                                                </form>
+                                                <form action="">
+                                                    <input type="submit" class="mt-2 btn btn-danger" value="Denied">
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                                <div class="col mt-5">
+                                    {% for category in menu_categories %}
+                                        <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
+                                            <div class="menu-section-header mb-4 text-center"><h4 class="bold">{{category.title}}</h4></div>
+                                            <div class="row menu-items">
+                                                {% for portion in menus %}
+                                                    {% for menu in portion.menu  %}
+                                                        {% if menu.menu_type == category %}
+                                                            <div class="col-sm-6">
+                                                                <div class="menu-item">
+                                                                    <div class="portion-count">
+                                                                    
+                                                                        <span>{{portion.portion_count}} portion  </span>
+                                                                    </div>
+                                                                    
+                                                                    <div class="menu-item-header">
+                                                                        <div class="menu-title"><span>{{menu.title}}</span></div>
+                                                                        <div class="menu-price"><span>${{menu.price}}</span></div>
+                                                                    </div>
+                                                                    <div class="menu-description">
+                                                                        <p>{{menu.description}}</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        {% endif %}
+                                                    {% endfor %}
+            
+                                                {% endfor %}
+                                                
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
                 
+                            
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
